--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,7 +25,7 @@
 // @import 'components/ui/video';
 
 @import 'components/business/header';
-
+@import 'components/business/menu';
 @import 'components/business/footer';
 // @import 'components/business/cookie';
 
