--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -1,2 +1,27 @@
 <footer class="footer">
+  <div class="container">
+    <div class="footer__top">
+      <img src="@icons/logo-footer.svg" class="footer__logo" />
+      <a href="tel:+7 (347) 292-14-70" class="footer__phone">+7 (347) 292-14-70</a>
+      <span class="footer__write-us link link_green-arrow">Напишите нам</span>
+      <div class="footer__social">
+        <span>Мы в социальных сетях:</span>
+        <a href="#">
+          <img src="@icons/tg.svg">
+        </a>
+        <a href="#">
+          <img src="@icons/wa.svg">
+        </a>
+        <a href="#">
+          <img src="@icons/vk.svg">
+        </a>
+      </div>
+      <div>Входит в состав <span>ассоциации развития информационных технологий</span> Республики Башкортостан</div>
+    </div>
+    <div class="footer__bottom">
+      <span>© «Fort Dialogue», 2023</span>
+      <a href="#" class="link">Политика конфиденциальности</a>
+      <a href="https://wptt.ru" class="link">Разработка — Вебпространство</a>
+    </div>
+  </div>
 </footer>
