--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -152,6 +152,12 @@
 	text-transform: uppercase;
 }
 
+@mixin medium-20 {
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 120%;
+}
+
 @mixin medium-18 {
 	font-size: 18px;
 	font-weight: 500;
@@ -324,3 +330,4 @@
 	line-height: 110%;
 	text-transform: uppercase;
 }
+
