--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -1,9 +1,11 @@
 $white: #ffffff;
 $black: #000000;
 $gray70: #4d4d4d;
+$gray90: #1a1a1a;
 $gray10: #ededed;
 $gray04: #f5f5f5;
 $green50: #00aa4d;
+$green60: #227a2f;
 
 $transitionDuration: 0.4s;
 
