--- a/src/html/components/business/_footer.html
+++ b/src/html/components/business/_footer.html
@@ -1,22 +1,116 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__top">
-      <img src="@icons/logo-footer.svg" class="footer__logo" />
-      <a href="tel:+7 (347) 292-14-70" class="footer__phone">+7 (347) 292-14-70</a>
-      <span class="footer__write-us link link_green-arrow">Напишите нам</span>
-      <div class="footer__social">
-        <span>Мы в социальных сетях:</span>
-        <a href="#">
-          <img src="@icons/tg.svg">
-        </a>
-        <a href="#">
-          <img src="@icons/wa.svg">
-        </a>
-        <a href="#">
-          <img src="@icons/vk.svg">
-        </a>
+      <a class="footer__logo" href="/">
+        <img src="@icons/logo-footer.svg" />
+      </a>
+      <div class="footer__info">
+        <a href="tel:+7 (347) 292-14-70" class="link footer__phone">+7 (347) 292-14-70</a>
+        <span class="footer__write-us link link_green-arrow">Напишите нам</span>
+        <div class="footer__social">Мы в социальных сетях:</div>
+        <div class="footer__socials">
+          <a href="#">
+            <img src="@icons/tg.svg">
+          </a>
+          <a href="#">
+            <img src="@icons/wa.svg">
+          </a>
+          <a href="#">
+            <img src="@icons/vk.svg">
+          </a>
+        </div>
+        <div class="footer__association">Входит в состав <a class="link link_green" href="#">ассоциации развития
+            информационных технологий</a>
+          Республики
+          Башкортостан
+        </div>
       </div>
-      <div>Входит в состав <span>ассоциации развития информационных технологий</span> Республики Башкортостан</div>
+      <div class="footer__accordion accordion">
+        <div class="footer__column">
+          <div class="accordion__list">
+            <div class="accordion__item">
+              <div class="accordion__toggle">Решения
+                <div class="accordion-icon"></div>
+              </div>
+              <div class="accordion__content">
+                <a class="link link_gray" href="#">ИТС Курсор</a>
+                <a class="link link_gray" href="#">АСУ ТП</a>
+                <a class="link link_gray" href="#">Центры обработки данных</a>
+                <a class="link link_gray" href="#">Системы технической безопасности</a>
+                <a class="link link_gray" href="#">Коммуникационные системы</a>
+                <a class="link link_gray" href="#">Программно-аппаратный комплекс Протокол</a>
+                <a class="link link_gray" href="#">Cистема мониторинга физиологических параметров операторов</a>
+                <a class="link link_gray" href="#">Система вибромониторинга насосного оборудования</a>
+                <a class="link link_gray" href="#">Комплексная система диспетчерского контроля и мониторинга
+                  промышленного
+                  оборудования</a>
+                <a class="link link_gray" href="#">Готовые решения на базе шкафов собственного производства</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="accordion__list">
+            <div class="accordion__item">
+              <div class="accordion__toggle">О компании
+                <div class="accordion-icon"></div>
+              </div>
+              <div class="accordion__content">
+                <a class="link link_gray" href="#">О компании</a>
+                <a class="link link_gray" href="#">35 лет истории успеха</a>
+                <a class="link link_gray" href="#">Карьера</a>
+                <a class="link link_gray" href="#">Руководство</a>
+                <a class="link link_gray" href="#">Партнеры</a>
+                <a class="link link_gray" href="#">Лицензии и сертификаты</a>
+              </div>
+            </div>
+            <div class="accordion__item">
+              <div class="accordion__toggle">Услуги
+                <div class="accordion-icon"></div>
+              </div>
+              <div class="accordion__content">
+                <a class="link link_gray" href="#">Инженерные изыскания</a>
+                <a class="link link_gray" href="#">Проектирование</a>
+                <a class="link link_gray" href="#">Комплексные поставки</a>
+                <a class="link link_gray" href="#">Монтажные и пусконаладочные работы</a>
+                <a class="link link_gray" href="#">Сервис</a>
+                <a class="link link_gray" href="#">BIM</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="accordion__list">
+            <div class="accordion__item">
+              <div class="accordion__toggle">Медиа
+                <div class="accordion-icon"></div>
+              </div>
+              <div class="accordion__content">
+                <a class="link link_gray" href="#">Новости</a>
+                <a class="link link_gray" href="#">Акции</a>
+                <a class="link link_gray" href="#">Мероприятия</a>
+                <a class="link link_gray" href="#">О нас в СМИ</a>
+              </div>
+            </div>
+            <div class="accordion__item">
+              <div class="accordion__toggle">Города филиалов
+                <div class="accordion-icon"></div>
+              </div>
+              <div class="accordion__content">
+                <a class="link link_gray" href="#">Уфа</a>
+                <a class="link link_gray" href="#">Набережные Челны</a>
+                <a class="link link_gray" href="#">Москва</a>
+                <a class="link link_gray" href="#">Казань</a>
+                <a class="link link_gray" href="#">Йошкар-Ола</a>
+                <a class="link link_gray" href="#">Ижевск</a>
+                <a class="link link_gray" href="#">Чебоксары</a>
+                <a class="link link_gray" href="#">Салават</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="footer__bottom">
       <span>© «Fort Dialogue», 2023</span>
