--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -21,7 +21,7 @@
 // @import 'components/ui/popup';
 // @import 'components/ui/rating';
 // @import 'components/ui/timer';
-// @import 'components/ui/accordion';
+@import 'components/ui/accordion';
 // @import 'components/ui/video';
 
 @import 'components/business/header';
