--- a/src/styles/base/_basic.scss
+++ b/src/styles/base/_basic.scss
@@ -133,11 +133,14 @@ section {
 
 	@include desktop {
 		margin-left: 50px;
-		margin-right: 50px;
+		margin-right: 70px;
 	}
 
 	@include desktop_base {
 		margin-left: 20px;
+	}
+
+	@include tablet {
 		margin-right: 20px;
 	}
 }
