--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -1,7 +1,9 @@
 $white: #ffffff;
 $black: #000000;
-$gray70: #4d4d4d;
 $gray90: #1a1a1a;
+$gray70: #4d4d4d;
+$gray60: #666666;
+$gray20: #cccccc;
 $gray10: #ededed;
 $gray04: #f5f5f5;
 $green50: #00aa4d;
