--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,7 +6,7 @@
 @import 'base/animation';
 
 // @import 'components/ui/logo';
-// @import 'components/ui/button';
+@import 'components/ui/button';
 @import 'components/ui/link';
 // @import 'components/ui/input';
 @import 'components/ui/dropdown';
@@ -27,5 +27,6 @@
 @import 'components/business/header';
 @import 'components/business/menu';
 @import 'components/business/footer';
+@import 'components/business/title';
 // @import 'components/business/cookie';
 
