--- a/src/styles/components/business/_header.scss
+++ b/src/styles/components/business/_header.scss
@@ -4,6 +4,11 @@
 	border-bottom: solid 1px $gray10;
 	height: 100px;
 	padding-right: 93px;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	background-color: $white;
+	z-index: 10;
 
 	@include tablet {
 		height: 45px;
