--- a/src/styles/components/business/_menu.scss
+++ b/src/styles/components/business/_menu.scss
@@ -1,9 +1,14 @@
 .menu {
 	padding: 100px 180px 70px 180px;
-	position: relative;
+	position: fixed;
+	top: 100px;
 	display: none;
 	flex-direction: column;
 	gap: 32px;
+	top: 100px;
+	background-color: $white;
+	width: 100%;
+	z-index: 10;
 
 	&.active {
 		display: flex;
