--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,5 +28,7 @@
 @import 'components/business/menu';
 @import 'components/business/footer';
 @import 'components/business/title';
+@import 'components/business/map';
+@import 'components/business/numbers';
 // @import 'components/business/cookie';
 
