--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -30,5 +30,6 @@
 @import 'components/business/title';
 @import 'components/business/map';
 @import 'components/business/numbers';
+@import 'components/business/partners';
 // @import 'components/business/cookie';
 
