--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -31,5 +31,7 @@
 @import 'components/business/map';
 @import 'components/business/numbers';
 @import 'components/business/partners';
+@import 'components/business/offers';
+@import 'components/business/solutions';
 // @import 'components/business/cookie';
 
