--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -1,8 +1,10 @@
 $white: #ffffff;
 $black: #000000;
 $gray90: #1a1a1a;
+$gray80: #333333;
 $gray70: #4d4d4d;
 $gray60: #666666;
+$gray40: #999999;
 $gray20: #cccccc;
 $gray10: #ededed;
 $gray04: #f5f5f5;
