--- a/src/styles/components/business/_partners.scss
+++ b/src/styles/components/business/_partners.scss
@@ -18,8 +18,12 @@
 		}
 
 		img {
-			width: unset;
-			height: unset;
+			object-fit: contain;
+
+			@include min_mobile {
+				width: unset;
+				height: unset;
+			}
 		}
 	}
 }
