--- a/src/styles/base/_basic.scss
+++ b/src/styles/base/_basic.scss
@@ -36,6 +36,14 @@ main {
 	flex: 1 0 auto;
 }
 
+section {
+	padding-right: 60px;
+
+	@include tablet {
+		padding-right: 0;
+	}
+}
+
 h1 {
 	@include bold-80-uppercase;
 
@@ -137,11 +145,22 @@ input {
 }
 
 .swiper-pagination-bullet {
-	background-color: rgb(255, 255, 255, 0.5);
+	bottom: 70px;
+	@include min_tablet {
+		display: none;
+	}
+}
+
+.swiper-pagination-bullet {
+	width: 24px;
+	background-color: $gray40;
+	border-radius: 0;
+	height: 3px;
 }
 
 .swiper-pagination-bullet-active {
-	background-color: $white;
+	width: 70px;
+	background-color: $gray10;
 }
 
 .container {
