--- a/src/styles/components/business/_offers.scss
+++ b/src/styles/components/business/_offers.scss
@@ -1,10 +1,8 @@
 .offers {
 	padding-top: 140px;
-	padding-right: 60px;
 
 	@include tablet {
 		padding-top: 80px;
-		padding-right: 0;
 	}
 
 	h2 {
@@ -54,7 +52,7 @@
 		}
 	}
 
-	&__list {
+	&__content {
 		margin-top: 80px;
 		display: grid;
 		grid-template-columns: minmax(300px, 689px) 1fr;
@@ -78,6 +76,15 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+	}
+
+	&__list {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+
+		@include desktop {
+			grid-template-columns: 1fr;
 		}
 	}
 }
