--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -35,5 +35,7 @@
 @import 'components/business/solution-card';
 @import 'components/business/resources';
 @import 'components/business/service-card';
+@import 'components/business/projects-section';
+@import 'components/business/project-card';
 // @import 'components/business/cookie';
 
