--- a/src/styles/base/_basic.scss
+++ b/src/styles/base/_basic.scss
@@ -46,6 +46,7 @@ section {
 
 h1 {
 	@include bold-80-uppercase;
+	color: $black;
 
 	@include tablet {
 		@include bold-40-uppercase;
@@ -58,6 +59,7 @@ h1 {
 
 h2 {
 	@include bold-60-uppercase;
+	color: $black;
 
 	@include tablet {
 		@include bold-30-uppercase;
@@ -87,6 +89,10 @@ h4 {
 
 p {
 	@include regular-18;
+
+	@include mobile {
+		font-size: 16px;
+	}
 }
 
 a {
@@ -144,23 +150,28 @@ input {
 	background-color: $gray70;
 }
 
-.swiper-pagination-bullet {
-	bottom: 70px;
-	@include min_tablet {
-		display: none;
+.swiper-pagination {
+	.swiper-pagination-bullet {
+		width: 24px;
+		background-color: $gray80;
+		border-radius: 0;
+		height: 3px;
 	}
-}
 
-.swiper-pagination-bullet {
-	width: 24px;
-	background-color: $gray40;
-	border-radius: 0;
-	height: 3px;
-}
+	.swiper-pagination-bullet-active {
+		width: 70px;
+		background-color: $gray40;
+	}
 
-.swiper-pagination-bullet-active {
-	width: 70px;
-	background-color: $gray10;
+	&_white {
+		.swiper-pagination-bullet {
+			background-color: $gray40;
+		}
+
+		.swiper-pagination-bullet-active {
+			background-color: $gray10;
+		}
+	}
 }
 
 .container {
