--- a/src/styles/components/ui/_button.scss
+++ b/src/styles/components/ui/_button.scss
@@ -12,9 +12,11 @@
 	background: transparent;
 	min-width: fit-content;
 	background-color: $white;
+	border: solid 1px $white;
 
 	@include mobile {
 		padding: 16px 24px;
+		height: 50px;
 	}
 
 	&:hover {
@@ -30,6 +32,22 @@
 		justify-content: center;
 		@include medium-20-uppercase;
 		line-height: 0;
+
+		@include mobile {
+			@include medium-16-uppercase;
+		}
+	}
+
+	&_green {
+		background-color: $green50;
+		color: $white;
+		border: 1px solid $green50;
+
+		&:hover {
+			background-color: transparent;
+			color: $green50;
+			border: 1px solid $green50;
+		}
 	}
 
 	&_secondary {
