--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,7 @@
 // @import 'components/ui/logo';
 @import 'components/ui/button';
 @import 'components/ui/link';
-// @import 'components/ui/input';
+@import 'components/ui/input';
 @import 'components/ui/dropdown';
 // @import 'components/ui/select';
 // @import 'components/ui/swiper';
@@ -31,11 +31,14 @@
 @import 'components/business/map';
 @import 'components/business/numbers';
 @import 'components/business/partners';
-@import 'components/business/offers';
+@import 'components/business/solutions-section';
 @import 'components/business/solution-card';
-@import 'components/business/resources';
+@import 'components/business/services-section';
 @import 'components/business/service-card';
 @import 'components/business/projects-section';
 @import 'components/business/project-card';
+@import 'components/business/career-section';
+@import 'components/business/form';
+
 // @import 'components/business/cookie';
 
