--- a/src/styles/base/_vars.scss
+++ b/src/styles/base/_vars.scss
@@ -5,11 +5,13 @@ $gray80: #333333;
 $gray70: #4d4d4d;
 $gray60: #666666;
 $gray40: #999999;
+$gray30: #b3b3b3;
 $gray20: #cccccc;
 $gray10: #ededed;
 $gray04: #f5f5f5;
 $green50: #00aa4d;
 $green60: #227a2f;
+$red: #f65d5d;
 
 $transitionDuration: 0.4s;
 
