--- a/src/styles/components/ui/_input.scss
+++ b/src/styles/components/ui/_input.scss
@@ -1,82 +1,80 @@
 input {
 	transition: all $transitionDuration;
-	padding: 10px 20px;
-	border: 1px solid $grayB9;
+	padding: 23px 28px;
+	border: 1px solid $gray30;
 	outline: none;
 	@include regular-16;
 	background-color: transparent;
 
-	@include tablet_small {
-		@include regular-14;
+	@include mobile {
+		padding: 15px 24px;
 	}
 
 	&:disabled {
-		background-color: $grayB9;
+		background-color: $gray60;
 		pointer-events: none;
 		user-select: none;
 	}
 	&::placeholder {
-		color: $grayB9;
+		color: $black;
 	}
 
-	&~.pristine-error {
+	& ~ .pristine-error {
 		display: none;
 	}
 
-	&[aria-invalid=true] {
+	&[aria-invalid='true'] {
 		&:not(:focus) {
-			border: 1px solid $redDB;
-		}	
-	}
-
-	&[type=tel],
-	&[type=date] {
-		@include FontFamilyZurichRegular;
-	}
-
-	&[type=date] {
-		text-transform: uppercase;
-		position: relative;
-
-		&:hover {
-			cursor: pointer;
-		}
-		&::-webkit-inner-spin-button,
-		&::-webkit-calendar-picker-indicator {
-			opacity: 0;			
-
-			&:hover {
-				cursor: pointer;
-			}
-		}
-		
-		&::after {
-			content: url(@icons/calendar.svg);
-			position: absolute;
-			right: 20px;
-			width: 24px;
-			height: 24px;
-			pointer-events: none;
+			border: 1px solid $red;
 		}
 	}
 
-	&[type=file] {
+	// &[type='date'] {
+	// 	text-transform: uppercase;
+	// 	position: relative;
+
+	// 	&:hover {
+	// 		cursor: pointer;
+	// 	}
+	// 	&::-webkit-inner-spin-button,
+	// 	&::-webkit-calendar-picker-indicator {
+	// 		opacity: 0;
+
+	// 		&:hover {
+	// 			cursor: pointer;
+	// 		}
+	// 	}
+
+	// 	&::after {
+	// 		content: url(@icons/calendar.svg);
+	// 		position: absolute;
+	// 		right: 20px;
+	// 		width: 24px;
+	// 		height: 24px;
+	// 		pointer-events: none;
+	// 	}
+	// }
+
+	&[type='file'] {
 		border: none;
 		padding: 0;
 		opacity: 0;
+		height: 100%;
 
 		&:hover {
 			cursor: pointer;
+		}
+
+		&[aria-invalid='true'] ~ .file-button {
+			border: 1px solid $red;
 		}
 	}
 
 	.has-success & {
 		&:not(:focus) {
-			border: 1px solid $green22;
+			border: 1px solid $green50;
 		}
 	}
-
-
 }
 
 .input__container {
@@ -85,10 +83,6 @@ input {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	
-	input {
-		@include FontFamilyZurichRegular;
-	}
 
 	.input__label {
 		@include regular-20;
@@ -97,13 +91,19 @@ input {
 			@include regular-14;
 		}
 	}
-	
+
 	&_file {
 		position: relative;
-		width: fit-content;
+		height: 68px;
 
 		&:hover {
 			cursor: pointer;
+		}
+
+		&.has-success {
+			.file-button {
+				border: 1px solid $green50;
+			}
 		}
 
 		.file-button {
@@ -112,61 +112,65 @@ input {
 			display: flex;
 			align-items: center;
 			gap: 10px;
+			padding: 23px 28px;
+			border: 1px solid $gray30;
+			width: 100%;
+			justify-content: center;
+			color: $gray30;
 
-			
-			
-			&::before {
-				content: url(@icons/file.svg);
+			&::after {
+				content: url(@icons/clip.svg);
 				width: 19px;
 				height: 19px;
 			}
-		}
-	}
 
-	&_password {
-		input[type="password"] {
-			@include FontFamilyZurichRegular;
-			padding-right: calc(.75rem + 26px);
-		}
-
-		.toggle-show-password-btn {
-			position: absolute;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 18px;
-			height: 18px;
-			bottom: 12px;
-			right: 20px;
-			cursor: pointer;
-		}
-
-		input[type="password"] + .toggle-show-password-btn {
-			&::before {
-				width: 18px;
-				height: 18px;
-				content: url("@icons/closeLock.svg");
-			}
-		}
-
-		input[type="text"] + .toggle-show-password-btn {
-			&::before {
-				width: 18px;
-				height: 18px;
-				content: url("@icons/openLock.svg");
+			@include mobile {
+				padding: 15px 24px;
 			}
 		}
 	}
+
+	// &_password {
+	// 	input[type='password'] {
+	// 		padding-right: calc(0.75rem + 26px);
+	// 	}
+
+	// 	.toggle-show-password-btn {
+	// 		position: absolute;
+	// 		display: flex;
+	// 		align-items: center;
+	// 		justify-content: center;
+	// 		width: 18px;
+	// 		height: 18px;
+	// 		bottom: 12px;
+	// 		right: 20px;
+	// 		cursor: pointer;
+	// 	}
+
+	// 	input[type='password'] + .toggle-show-password-btn {
+	// 		&::before {
+	// 			width: 18px;
+	// 			height: 18px;
+	// 			content: url('@icons/closeLock.svg');
+	// 		}
+	// 	}
+
+	// 	input[type='text'] + .toggle-show-password-btn {
+	// 		&::before {
+	// 			width: 18px;
+	// 			height: 18px;
+	// 			content: url('@icons/openLock.svg');
+	// 		}
+	// 	}
+	// }
 
 	&_valid {
 		input:not(:focus) {
-
 		}
 	}
 
 	&_invalid {
 		input:not(:focus) {
-
 		}
 
 		.error-message {
@@ -178,7 +182,7 @@ input {
 		position: absolute;
 		color: $white;
 		top: 1.0625rem;
-		left: .75rem;
+		left: 0.75rem;
 
 		-webkit-touch-callout: none;
 		-webkit-user-select: none;
@@ -188,70 +192,70 @@ input {
 	}
 }
 
-.input-wrapper {
-	display: flex;
-	gap: 10px;
+// .input-wrapper {
+// 	display: flex;
+// 	gap: 10px;
 
-	input[type="number"]::-webkit-inner-spin-button,
-	input[type="number"]::-webkit-outer-spin-button {
-		-webkit-appearance: none;
-		appearance: none;
-		margin: 0;
-	}
+// 	input[type='number']::-webkit-inner-spin-button,
+// 	input[type='number']::-webkit-outer-spin-button {
+// 		-webkit-appearance: none;
+// 		appearance: none;
+// 		margin: 0;
+// 	}
 
-	input[type="number"] {
-		@include FontFamilyZurichRegular;
-		-moz-appearance: textfield;
-		color: $black25;
-		text-align: center;
-		@include regular-16;
-		padding: 0;
-		width: 30px;
-	}
+// 	input[type='number'] {
+// 		-moz-appearance: textfield;
+// 		color: $black;
+// 		text-align: center;
+// 		@include regular-16;
+// 		padding: 0;
+// 		width: 30px;
+// 	}
 
-	button {
-		@include regular-26;
-		max-width: 10px;
-		cursor: pointer;
-		color: $black25;
-		background: transparent;
-		border: none;
-		transition: color $transitionDuration ease-in-out;
-		user-select: none;
+// 	button {
+// 		@include regular-26;
+// 		max-width: 10px;
+// 		cursor: pointer;
+// 		color: $black;
+// 		background: transparent;
+// 		border: none;
+// 		transition: color $transitionDuration ease-in-out;
+// 		user-select: none;
 
-		&:hover {
-			color: $green22;
-		}
+// 		&:hover {
+// 			color: $green50;
+// 		}
 
-		&._disabled {
-			pointer-events: none;
-			color: $grayB9;
-		}
-	}
+// 		&._disabled {
+// 			pointer-events: none;
+// 			color: $grayB9;
+// 		}
+// 	}
 
-	.quantity {
-		pointer-events: none;
-	}
-}
+// 	.quantity {
+// 		pointer-events: none;
+// 	}
+// }
 
 .input-wrapper * {
 	border: none;
 	flex: 1;
 }
 
-.input__reset {
-	width: 24px;
-	height: 24px;
-	position: absolute;
-	border: none;
-	background-color: transparent;
-	background-image: url('@icons/close-icon.svg');
-	background-position: center;
-	background-repeat: no-repeat;
-	right: 20px;
-	top: 45px;
+// .input__reset {
+// 	width: 24px;
+// 	height: 24px;
+// 	position: absolute;
+// 	border: none;
+// 	background-color: transparent;
+// 	background-image: url('@icons/close-icon.svg');
+// 	background-position: center;
+// 	background-repeat: no-repeat;
+// 	right: 20px;
+// 	top: 45px;
 
-	&:hover {
-		cursor: pointer;
-	}
-}
+// 	&:hover {
+// 		cursor: pointer;
+// 	}
+// }
+
