--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -39,6 +39,9 @@
 @import 'components/business/project-card';
 @import 'components/business/career-section';
 @import 'components/business/form';
+@import 'components/business/media-section';
+@import 'components/business/news-card';
+@import 'components/business/questions';
 
 // @import 'components/business/cookie';
 
