add tabs controller

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -23,6 +23,7 @@
 // @import 'components/ui/timer';
 @import 'components/ui/accordion';
 // @import 'components/ui/video';
+@import 'components/ui/tabs';
 
 @import 'components/business/header';
 @import 'components/business/menu';
