--- a/src/styles/components/business/_career-section.scss
+++ b/src/styles/components/business/_career-section.scss
@@ -3,6 +3,11 @@
 	height: 909px;
 	margin-bottom: 125px;
 
+	@include tablet {
+		height: unset;
+		margin-bottom: 0;
+	}
+
 	.container {
 		padding-top: 140px;
 		padding-bottom: 126px;
