--- a/src/styles/components/business/_form.scss
+++ b/src/styles/components/business/_form.scss
@@ -38,7 +38,7 @@
 		gap: 20px;
 		justify-content: space-between;
 
-		@include mobile {
+		@include tablet_small {
 			flex-direction: column;
 			gap: 10px;
 		}
