--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -15,7 +15,7 @@
 // @import 'components/ui/close-btn';
 // @import 'components/ui/favorite';
 // @import 'components/ui/form';
-// @import 'components/ui/textarea';
+@import 'components/ui/textarea';
 // @import 'components/ui/checkbox';
 // @import 'components/ui/pagination';
 // @import 'components/ui/popup';
